# mann-blf-autoregressive

./: CMakeLists.txt  README.md  mann_mpc_test_joypad.py  mann_test_joypad.py  test.py  test_trajectory_generator.py
config/: config.toml  config_mann.toml  config_mpc.toml  onnx_149_mann8.onnx  onnx_30_mann8.onnx
src/: main.cpp
